// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MultiSelect should match a snapshot and render children 1`] = `
<ElMultiSelect
  className=""
>
  <span>
    Some Value
  </span>
</ElMultiSelect>
`;

exports[`MultiSelectChip should match a snapshot and render children 1`] = `
<Fragment>
  <ElMultiSelectCheckbox
    id="test-id"
    type="checkbox"
  />
  <ElMultiSelectLabel
    className=""
    htmlFor="test-id"
  >
    <span>
      Some Value
    </span>
  </ElMultiSelectLabel>
</Fragment>
`;

exports[`MultiSelectInput should match a snapshot and render children 1`] = `
<ElMultiSelectInputWrapper>
  <ElMultiSelectInput
    id="react-example"
  />
  <MultiSelectSelected>
    <MultiSelectChip
      defaultChecked={true}
      key="item-one"
      onChange={[Function]}
    >
      Item one
    </MultiSelectChip>
  </MultiSelectSelected>
  <MultiSelectUnSelected>
    <MultiSelectChip
      className="el-has-grey-chips"
      defaultChecked={false}
      key="item-two"
      onChange={[Function]}
    >
      Item two
    </MultiSelectChip>
    <MultiSelectChip
      className="el-has-grey-chips"
      defaultChecked={false}
      key="item-three"
      onChange={[Function]}
    >
      Item three
    </MultiSelectChip>
  </MultiSelectUnSelected>
</ElMultiSelectInputWrapper>
`;

exports[`MultiSelectInput should match a snapshot and render non selected message where there are no selected items 1`] = `
<ElMultiSelectInputWrapper>
  <ElMultiSelectInput
    id="react-example"
  />
  <MultiSelectSelected>
    <Icon
      className="el-ml2"
      icon="selectInfographic"
      iconSize="medium"
    />
    <p>
      No items selected
    </p>
  </MultiSelectSelected>
  <MultiSelectUnSelected>
    <MultiSelectChip
      className="el-has-grey-chips"
      defaultChecked={false}
      key="item-one"
      onChange={[Function]}
    >
      Item one
    </MultiSelectChip>
    <MultiSelectChip
      className="el-has-grey-chips"
      defaultChecked={false}
      key="item-two"
      onChange={[Function]}
    >
      Item two
    </MultiSelectChip>
    <MultiSelectChip
      className="el-has-grey-chips"
      defaultChecked={false}
      key="item-three"
      onChange={[Function]}
    >
      Item three
    </MultiSelectChip>
  </MultiSelectUnSelected>
</ElMultiSelectInputWrapper>
`;

exports[`MultiSelectSelected should match a snapshot and render children 1`] = `
<ElMultiSelectSelected
  className=""
>
  <span>
    Some Value
  </span>
</ElMultiSelectSelected>
`;

exports[`MultiSelectUnSelected should match a snapshot and render children 1`] = `
<ElMultiSelectUnSelected
  className=""
>
  <span>
    Some Value
  </span>
</ElMultiSelectUnSelected>
`;
